<resources>

    <string name="app_name">MealSloth</string>
    <string name="action_settings">Settings!</string>
    <string name="hello">Hello</string>
    <string name="available_meals">Available Meals</string>

    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_meal_confirmation">Meal Confirmation</string>
    <string name="title_activity_meal_confirmation2">Meal Confirmation</string>
    <string name="title_activity_meal_confirmation3">Meal Confirmation</string>
    <string name="title_activity_favorites_meals">Favorite Meals</string>

    <string name="name_yoshikazu_short">Yoshikazu</string>
    <string name="name_yoshikazu_long">Yoshikazu Ono</string>

    <string name="logistics_yoshikazu">Location: Raleigh, NC\nDistance from Home: 1.1mi</string>
    <string name="information_yoshikazu">Age: 57  Sex: Male  Occupation: Sushi Chef</string>
    <string name="description_yoshikazu">I am a sushi chef trained in Japan under the direction
        of Jiro Ono but I now live in Raleigh, NC with my family and make sushi regularly. I would
        like to sell some of my sushi to my neighbors here and I hope you enjoy it</string>

    <string name="name_meal1">Strawberry Maki</string>
    <string name="description_meal1">Avocado, asparagus, cucumber, and mushroom wrapped in
        seaweed and rice with thinly sliced strawberries on top</string>
    <string name="logistics_meal1">Chef location: Raleigh, NC\nDistance from home: 1.1mi\nTake-out
        or Delivery</string>
    <string name="serving_meal1">Price per serving: $5\nServing size: 8 pieces</string>

    <string name="meals">Meals</string>
    <string name="chefs">Chefs</string>
    <string name="no_favorites_chefs">You have no favorite chefs!</string>
    <string name="no_favorites_meals">You have no favorite meals!</string>

    <string name="test_become_a_chef">Test become a chef</string>
    <string name="test_favorites">Test favorites</string>
    <string name="test_home">Test home</string>
    <string name="test_profile">Test profile</string>
    <string name="test_settings">Test settings</string>
    <string name="test_meal1">Test meal1</string>
    <string name="test_meal2">Test meal2</string>
    <string name="test_meal3">Test meal3</string>
    <string name="test_meal4">Test meal4</string>
    <string name="test_meal5">Test meal5</string>
    <string name="test_meal6">Test meal6</string>

    <string name="title_activity_favorites_chefs">FavoritesChefsActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="hello_world">Hello world!</string>

</resources>