<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/solid_white">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="37dp"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="290dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/meal1_confirmation_ver"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="140dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginLeft="6dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.8"
                            android:scaleType="centerInside"
                            android:src="@drawable/yoshikazu_profile_photo"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:textSize="16dp"
                            android:layout_weight="0.2"
                            android:gravity="center"
                            android:textColor="@color/solid_white"
                            android:shadowColor="@color/solid_black"
                            android:shadowRadius="2"
                            android:text="@string/name_yoshikazu_long"/>

                    </LinearLayout>

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.1"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/solid_black"
                        android:textSize="24dp"
                        android:text="@string/name_meal1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/solid_black"
                        android:textSize="16dp"
                        android:text="@string/description_meal1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/solid_black"
                        android:textSize="16dp"
                        android:text="@string/logistics_meal1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:textColor="@color/solid_black"
                        android:textSize="16dp"
                        android:text="@string/serving_meal1"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:background="@color/transparency">

        <ImageButton
            android:id="@+id/navButtonBecomeAChef"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.97"
            android:layout_marginTop="10dp"
            android:scaleType="centerInside"
            android:background="@color/transparent_darkgrey"
            android:src="@drawable/nav_button_become_a_chef"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.03"
            android:layout_marginTop="10dp"
            android:background="@color/solid_black"/>

        <ImageButton
            android:id="@+id/navButtonFavorites"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.97"
            android:layout_marginTop="10dp"
            android:scaleType="centerInside"
            android:background="@color/transparent_darkgrey"
            android:src="@drawable/nav_button_favorites"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.03"
            android:layout_marginTop="10dp"
            android:background="@color/solid_black"/>

        <ImageButton
            android:id="@+id/navButtonHome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.97"
            android:scaleType="centerInside"
            android:background="@color/transparent_darkgrey"
            android:src="@drawable/nav_button_home"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.03"
            android:layout_marginTop="10dp"
            android:background="@color/solid_black"/>

        <ImageButton
            android:id="@+id/navButtonProfile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.97"
            android:layout_marginTop="10dp"
            android:scaleType="centerInside"
            android:background="@color/transparent_darkgrey"
            android:src="@drawable/nav_button_profile"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.03"
            android:layout_marginTop="10dp"
            android:background="@color/solid_black"/>

        <ImageButton
            android:id="@+id/navButtonSettings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.97"
            android:layout_marginTop="10dp"
            android:scaleType="centerInside"
            android:background="@color/transparent_darkgrey"
            android:src="@drawable/nav_button_settings"/>

    </LinearLayout>

</FrameLayout>
