<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/solid_black">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/mealsloth_red_transparent_3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:background="@color/solid_black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:background="@color/transparent_grey"
                android:textColor="@color/solid_white"
                android:textSize="24dp"
                android:layout_weight="0.8"
                android:text="@string/no_favorites_chefs"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:background="@color/transparent_grey"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewFavoritesMeals"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:textColor="@color/solid_white"
                android:textSize="24dp"
                android:gravity="center"
                android:background="@color/mealsloth_red_transparent_2"
                android:clickable="true"
                android:text="@string/meals"/>

            <TextView
                android:id="@+id/textViewFavoritesChefs"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:textColor="@color/solid_white"
                android:textSize="24dp"
                android:gravity="center"
                android:background="@color/mealsloth_red_solid"
                android:clickable="true"
                android:text="@string/chefs"/>

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:background="@color/transparency">

        <ImageButton
            android:id="@+id/navButtonBecomeAChef"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.97"
            android:layout_marginTop="10dp"
            android:scaleType="centerInside"
            android:background="@color/transparent_darkgrey"
            android:src="@drawable/nav_button_become_a_chef"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.03"
            android:layout_marginTop="10dp"
            android:background="@color/solid_black"/>

        <ImageButton
            android:id="@+id/navButtonFavorites"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.97"
            android:layout_marginTop="10dp"
            android:scaleType="centerInside"
            android:background="@color/transparent_darkgrey"
            android:src="@drawable/nav_button_favorites"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.03"
            android:layout_marginTop="10dp"
            android:background="@color/solid_black"/>

        <ImageButton
            android:id="@+id/navButtonHome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.97"
            android:scaleType="centerInside"
            android:background="@color/transparent_darkgrey"
            android:src="@drawable/nav_button_home"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.03"
            android:layout_marginTop="10dp"
            android:background="@color/solid_black"/>

        <ImageButton
            android:id="@+id/navButtonProfile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.97"
            android:layout_marginTop="10dp"
            android:scaleType="centerInside"
            android:background="@color/transparent_darkgrey"
            android:src="@drawable/nav_button_profile"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.03"
            android:layout_marginTop="10dp"
            android:background="@color/solid_black"/>

        <ImageButton
            android:id="@+id/navButtonSettings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.97"
            android:layout_marginTop="10dp"
            android:scaleType="centerInside"
            android:background="@color/transparent_darkgrey"
            android:src="@drawable/nav_button_settings"/>

    </LinearLayout>

</FrameLayout>
